--- a/mobile/src/main/res/layout/activity_current_workout.xml
+++ b/mobile/src/main/res/layout/activity_current_workout.xml
@@ -1,17 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
-                                       android:layout_height="wrap_content"
-                                       app:title="@string/current_workout"
-                                       style="@style/actionbar"/>
-        <FrameLayout
-            android:id="@+id/activity_current_workout_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-        </FrameLayout>
-</LinearLayout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
+  <data>
+    <variable
+        name="viewModel"
+        type="vzijden.workout.view.workout.CurrentWorkoutViewModel" />
+  </data>
+
+
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        style="@style/actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="@string/current_workout" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+      <FrameLayout
+          android:id="@+id/activity_current_workout_container"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"></FrameLayout>
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom"
+          android:background="@drawable/bottombar_background"
+          android:elevation="10dp"
+          android:orientation="horizontal"
+          android:padding="16dp">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextAppearance.light"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingRight="8dp">
+
+          <com.google.android.material.textfield.TextInputEditText
+              style="@style/TextInputEditText.light"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:inputType="number"
+              android:text="@{viewModel.currentReps}"
+              tools:text="8" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextAppearance.light"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="8dp">
+
+          <com.google.android.material.textfield.TextInputEditText
+              style="@style/TextInputEditText.light"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:inputType="number"
+              android:text="@{viewModel.currentWeight}"
+              tools:text="20kg" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:backgroundTint="@color/design_default_color_on_primary"
+            android:text="@string/complete_set"
+            android:onClick="@{(v) -> viewModel.onCompleteSetClicked()}"
+            android:textColor="@color/colorPrimary" />
+      </LinearLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+  </LinearLayout>
+</layout>
