--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -32,5 +32,17 @@
     <style name="actionbar.titletextstyle" parent="@style/TextAppearance.AppCompat.Title">
         <item name="android:textColor">#000</item>
     </style>
+    
+    <style name="TextAppearance.light" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/text_input_outline_light</item>
+        <item name="hintTextColor">#fff</item>
+        <item name="android:textColor">#fff</item>
+    </style>
 
+    <style name="TextInputEditText.light" parent="android:Widget.EditText">
+        <item name="boxStrokeColor">@color/text_input_outline_light</item>
+        <item name="hintTextColor">#fff</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_light</item>
+    </style>
 </resources>
